# PrintCrate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Procfile  README.md  TESTING.md  custom_storages.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: PrintCrate-build.yaml  PrintCrate-orchestration.yaml
about/: apps.py  tests.py  urls.py  views.py
about/templates/: about.html
accounts/: apps.py  forms.py  tests.py  urls.py  views.py
accounts/templates/: index.html  login.html  profile.html  register.html
cart/: apps.py  contexts.py  tests.py  urls.py  views.py
cart/templates/: cart.html
checkout/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
checkout/migrations/: 0001_initial.py  0002_auto_20200425_1602.py  0002_auto_20200513_1344.py  0003_auto_20200513_2253.py  0004_auto_20200513_2339.py  0005_auto_20200518_1347.py  0006_auto_20200519_2302.py  0007_auto_20200521_1220.py  0008_auto_20200521_2003.py  0009_auto_20200524_0923.py  0010_auto_20200524_1349.py  0011_auto_20200524_1350.py  0012_auto_20200525_1935.py  0013_auto_20200525_2019.py  0014_auto_20200525_2019.py  0015_auto_20200526_0922.py  0016_auto_20200526_0943.py  0017_auto_20200528_0925.py  0018_auto_20200531_1252.py  (+1 more)
contact/: apps.py  forms.py  urls.py  views.py
faq/: urls.py  views.py
homepage/: apps.py  urls.py  views.py
printcrate/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
products/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
templates/: 404.html  500.html  base.html
(+36 files in other folders)
