[tool.poetry]
name = "printcrate"
version = "0.2.0"
description = "Django webstore for 3D printed creations."
authors = ["Elliot Redhead"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
django = "~4.0"
django-crispy-forms = "~2.0"
django-storages = "~1.13"
pillow = "~9.4"
psycopg2 = "~2.9"
stripe = "2.47.0"

[tool.poetry.group.dev.dependencies]
black = "~23.1"
django-upgrade = "~1.13.0"
flake8 = "~6.0"
isort = "~5.12"
poetry-audit-plugin = "~0.3.0"
pre-commit = "~3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
